[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/TitleScreen/ContinuePlaceHolder.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/TitleScreen/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://UI/TitleScreen/Options/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/TitleScreen/MainMenu.tscn" type="PackedScene" id=4]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffScreenSetPosition2D" type="Position2D" parent="."]
position = Vector2( 1200, 0 )

[node name="Menus" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="Menus" instance=ExtResource( 4 )]

[node name="ContinuePlaceHolder" parent="Menus" instance=ExtResource( 1 )]

[node name="OptionsMenu" parent="Menus" instance=ExtResource( 3 )]
